missing toLowerCase in commandHandler CustomCommand deprecated access function